[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ada-mj"
version = "0.1.0"
description = "MuJoCo simulation and mj_manipulator integration for the ADA robot-assisted feeding system"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Siddhartha Srinivasa", email = "siddhartha.srinivasa@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "mujoco",
    "ada-assets @ git+https://github.com/personalrobotics/ada_assets.git",
    "mj-manipulator @ git+https://github.com/personalrobotics/mj_manipulator.git",
    "mj-environment @ git+https://github.com/personalrobotics/mj_environment.git",
]

[tool.uv.sources]
ada-assets = { workspace = true }
mj-manipulator = { workspace = true }
mj-environment = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
console = [
    "ipython>=8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ada_mj"]

[project.urls]
Homepage = "https://github.com/personalrobotics/ada_mj"
Repository = "https://github.com/personalrobotics/ada_mj"
Issues = "https://github.com/personalrobotics/ada_mj/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
